src/test/deca/codegen/valid/created/Objet/Downcast.deca
// Description:
// Downcast
// Resultats:
// 1

class A{
    int m(){
        return 1;
    }
}

class B extends A{

}

{
    B newB = new B();
    println(((A)(newB)).m());
}